# goit-python-web-hw-14

./: README.md  main.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_static/: nature.css
migrations/: env.py
migrations/versions/: 3104be9ac993_init.py  48dcd9ca8a84_init.py  e2b5db384efe_init.py
postgres-data/: pg_hba.conf  postgresql.conf
postgres-data/base/13481/: pg_internal.init
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
src/: schemas.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
